[package]
name = "mazth"
version = "0.2.0"
authors = ["Yuan Liu <yuan6liu@gmail.com>"]
description = "Matrix utilities."
repository = "https://github.com/clearlycloudy/mazth/"
keywords = [ "matrix", "mazth", "quaternion", "slerp", "sclerp" ]
license = "BSD-2-Clause"
documentation = "https://docs.rs/mazth/0.2.0/mazth/"
readme = "README.md"

[dependencies]
# num = "0.1.41"

[lib]
name = "mazth"
path = "lib/mod.rs"