[package]
name = "mazth"
version = "1.1.0"
authors = ["Yuan Liu <yuan6liu@gmail.com>"]
description = "Matrix utilities."
repository = "https://github.com/clearlycloudy/mazth/"
keywords = [ "matrix", "mazth", "quaternion", "slerp", "sclerp" ]
license = "BSD-2-Clause"
documentation = "https://docs.rs/mazth/0.6.0/mazth/"
readme = "README.md"

[dependencies]
ndarray = "0.13.0"
ndarray-rand = "0.11.0"
ndarray-linalg = { version = "0.12", features = ["openblas"] }
approx = "0.3.2"

[lib]
name = "mazth"
path = "lib/mod.rs"